--- a/client/index.html
+++ b/client/index.html
@@ -6,23 +6,44 @@
     <title>ami-chat</title>
     <script type="module">
         import { io } from 'https://cdn.socket.io/4.3.2/socket.io.esm.min.js'
+       
+        const getUsername = async () => { //falta implementar sistema de login y guardar el usuario en localStorage
+            const username = localStorage.getItem('username') //recuperamos el usuario, faltaria validar esto con el servidor
+            if (username) {
+                console.log(`User exsisted ${username}`)
+            }
 
-        const socket = io()
+            const res = await fetch('https://random-data-api.com/api/users/random_user')
+            const { username: randomUsername } = await res.json()
+
+            localStorage.setItem('username', randomUsername)
+            return randomUsername
+        }
+
+        const socket = io({
+            auth: {
+                token: '1312',
+                username: await getUsername(),
+                serverOffset: 0
+            }
+        })
 
         const form = document.getElementById('form')
         const input = document.getElementById('input')
         const messages = document.getElementById('messages')
 
-        socket.on('chat message', (msg) => {
+
+        socket.on('chat message', (msg, serverOffset, username) => {
             const item = `<li>${msg}</li>`
             messages.insertAdjacentHTML('beforeend', item)
+            socket.auth.serverOffset = serverOffset
         })
 
         form.addEventListener('submit', (e) => {
             e.preventDefault()
 
             if (input.value) {
-                socket.emit('chat message', input.value)
+                socket.emit('chat message', input.value, username)
                 input.value = ''
             }
         })
