--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ami-chat</title>
     <script type="module">
+        // import { getColor } from './getColor.js'
         import { io } from 'https://cdn.socket.io/4.3.2/socket.io.esm.min.js'
        
         const getUsername = async () => { //falta implementar sistema de login y guardar el usuario en localStorage
             const username = localStorage.getItem('username') //recuperamos el usuario, faltaria validar esto con el servidor
             if (username) {
                 console.log(`User exsisted ${username}`)
+                // return username
             }
 
             const res = await fetch('https://random-data-api.com/api/users/random_user')
@@ -32,18 +34,31 @@
         const input = document.getElementById('input')
         const messages = document.getElementById('messages')
 
+        
 
         socket.on('chat message', (msg, serverOffset, username) => {
-            const item = `<li>${msg}</li>`
+            const colors = ['#16290a','#223e0f','#2d5214','#386719','#437b1e','#4e9023', ];
+            const randomNumber = Math.floor(Math.random() * colors.length);
+
+            const userColor = colors[randomNumber]
+            const item = 
+            `<li style="background-color: ${userColor};">
+            <small>${username}</small>
+            <p>${msg}</p>
+            </li>`
             messages.insertAdjacentHTML('beforeend', item)
             socket.auth.serverOffset = serverOffset
+
+            //scroll to bottom of messages
+            messages.scrollTop = messages.scrollHeight
         })
 
         form.addEventListener('submit', (e) => {
+            console.log('button pressed')
             e.preventDefault()
 
             if (input.value) {
-                socket.emit('chat message', input.value, username)
+                socket.emit('chat message', input.value)
                 input.value = ''
             }
         })
@@ -73,15 +88,35 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
+            overflow-y: scroll;
+            height: 100%;
+            scroll-behavior: smooth;
+            padding-bottom: 42px;
         }
 
         #messages > li {
-            padding: .5rem 1 rem;
+            border: 1px solid #ccc;
+            padding: 10px 10px 0px 12px;
+            margin: 5px 0;
+            border-radius: 25px;
+            /* background-color: #ff0000; */
         }
 
-        #messages > li:nth-child(odd){
+        #messages > li > small {
+            font-size: 14px;
+            font-weight: bold;
+            color: #ffffff5b;
+        }
+
+        #messages > li > p {
+            font-size: 16px;
+            color: #ffffffaf;
+            margin-top: 0.1rem;
+        }
+
+        /* #messages > li:nth-child(odd){
             background: #2a2a2a;
-        } 
+        }  */
 
         #chat {
             border: 1px solid #ccc;
