--- a/client/index.html
+++ b/client/index.html
@@ -86,7 +86,7 @@
 
         #messages{
             list-style-type: none;
-            margin: 0;
+            margin: 0px 0px 0px 1px;
             padding: 0;
             overflow-y: scroll;
             height: 100%;
